bin/html_res/memcheck-cover.css
/*************************\
|**    Header styles    **|
\*************************/

/* HTML report title */
.report_title {
    font-weight: bold;
    font-size: 2.1em;
    text-align: center;
    margin: 10px;
    padding-top: 30px;
    color: #3333FF;
}

/* HTML report separator */
.report_separator {
    margin: 40px auto;
    width: 425px;
    height: 10px;
    display: block;
    border-radius: 10px;
    background-color: #000084;
}

.report_summary {
    margin-left: 20px;
}

/*************************\
|**   Collapse/Expand   **|
|**       Buttons       **|
\*************************/

.expand,
.collapse {
    position: relative;
    display: inline-block;
    padding-left: 6px;
}

.expandall,
.collapseall {
    position: relative;
    padding: 2px;
    margin: 6px;
    display: inline-block;

    /* Enable pointer on hover to inform the user it can be clicked */
    cursor: pointer;
}

/* All sub-div are 10x10 squares, with white background */
.expand > div,
.collapse > div,
.expandall > div,
.collapseall > div {
    width: 10px;
    height: 10px;
    background: #FFFFFF;
    position: absolute;
}

/* All expand and 1st collapse sub-div have 1px light-blue solid border*/
.expand > div,
.collapse > div,
.expandall > div,
.collapseall div:nth-child(1) {
    border: solid #8787ee 1px;
}

/* Other collapse sub-div have 1px blue dotted border*/
.collapseall div:nth-child(2),
.collapseall div:nth-child(3) {
    border: dotted #0505ff 1px;
}

.expand div:nth-child(1),
.collapse div:nth-child(1),
.expandall div:nth-child(1),
.collapseall div:nth-child(1) {
    position: relative;
    z-index: 12;
}

.expand div:nth-child(1):before,
.expand div:nth-child(1):after,
.collapse div:nth-child(1):before,
.collapse div:nth-child(1):after,
.expandall div:nth-child(1):before,
.expandall div:nth-child(1):after,
.collapseall div:nth-child(1):before,
.collapseall div:nth-child(1):after {
    content: "";
    position: absolute;
    background: #000000;
}

/* Draw the "minus" bar for both the collapse and expand 1st div */
.expand div:nth-child(1):after,
.collapse div:nth-child(1):after,
.expandall div:nth-child(1):after,
.collapseall div:nth-child(1):after {
    left: 1px;
    top: 40%;
    height: 20%;
    width: 80%;
}

/* Draw the vertical bar only for the expand 1st div */
.expand div:nth-child(1):before,
.expandall div:nth-child(1):before {
    top: 1px;
    left: 40%;
    width: 20%;
    height: 80%;
}

.expandall div:nth-child(2),
.collapseall div:nth-child(2) {
    z-index: 11;
    top: 0px;
    left: 4px;
}

.expandall div:nth-child(3),
.collapseall div:nth-child(3) {
    z-index: 10;
    top: -2px;
    left: 6px;
}

/*************************\
|**   Analysis styles   **|
\*************************/

/* Memcheck analysis title */
.memcheck_analysis_title {
    font-weight: bold;
    font-size: 1.2em;
    padding-bottom: 3px;

    /* Enable pointer on hover to inform the user it can be clicked */
    cursor: pointer;

    /* Disable text selection to avoid double click selection */
    user-select: none;
}

/* Change the background color on hover for an additionnal hint the title can be clicked */
.memcheck_analysis_title:hover {
    background-color: #F2F2FF;
}

/* Memcheck analysis content */
.memcheck_analysis_content {
    margin-left: 25px;
    padding: 5px 10px 7px 25px;
    border: solid thin #CCCCCC;

    /* Use a monospace font to preserve valgrind report alignment */
    font-family: Courier New,Courier,Lucida Sans Typewriter,Lucida Typewriter,monospace;
}

/* Don't display element inheriting this class */
.hidden {
    display: none;
}

/*************************\
|**    Results loader   **|
\*************************/
.result_loader {
    display: inline-block;
    border: 4px solid #f3f3f3; /* Light grey */
    border-top: 4px solid #3498db; /* Blue */
    border-radius: 50%;
    width: 15px;
    height: 15px;
    animation: rotate_360 1s linear infinite;
}

@keyframes rotate_360 {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

.result_loader_text:before {
    animation: head_anim 3s linear infinite;
    content: "";
    position: relative;
    bottom: 5px;
}

@keyframes head_anim {
      0% { content: "  Loading report, please wait..." }
     33% { content: "  Loading report, please wait." }
     66% { content: "  Loading report, please wait.." }
    100% { content: "  Loading report, please wait..." }
}

/*************************\
|**    Results styles   **|
\*************************/

/* Valgrind's report has no error */
.analysis_pass_status {
    width: 100px;
    display: inline-block;
    text-align: center;
    color: #00CF00; /* Green */
}

/* Valgrind's report has no error but at least one warning */
.analysis_warning_status {
    width: 100px;
    display: inline-block;
    text-align: center;
    color: #CC5500; /* Orange */
}

/* Valgrind's report has at least one error */
.analysis_error_status {
    width: 100px;
    display: inline-block;
    text-align: center;
    color: #FF0000; /* Red */
}

/* Braces are a bit lower than other caracters, move it up */
.brace_recenter {
    position: relative;
    bottom: 2px;
}

/* Leak errors */
.error_leak {
    color: #FF0000; /* Red */
    font-weight: bold;
}

/* Leak warnings */
.warning_leak {
    color: #CC5500; /* Orange */
    font-weight: bold;
}

/* Leak context info */
.leak_context_info {
    color: #13A8BA; /* Cyan */
    font-weight: bold;
}

/* Leak file info */
.leak_file_info {
    color: #C017B2; /* Purple */
    font-style: italic;
    text-decoration: underline;
}

/* Leak program exit */
.leak_program_exit {
    font-style: italic;
    font-weight: bold;
}

